--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -53,14 +53,14 @@ hr {
 
 }
 #field_email {
-	background: url(person.png) no-repeat 97%;
+	background: url('/assets/person.png') no-repeat 97%;
 	background-size: 20px;
 	width: 100%;
 }
 
 
 #field_password {
-	background: url(locker.png) no-repeat 97%;
+	background: url('/assets/locker.png') no-repeat 97%;
 	background-size: 20px;
 
 	width: 100%;
