Add background image

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -53,14 +53,14 @@ hr {
 
 }
 #field_email {
-	background: url('/assets/person.png') no-repeat 97%;
+	background: url('<%= asset_path("person.png") %> ') no-repeat 97%;
 	background-size: 20px;
 	width: 100%;
 }
 
 
 #field_password {
-	background: url('/assets/locker.png') no-repeat 97%;
+	background: url('<%= asset_path("locker.png") %> ') no-repeat 97%;
 	background-size: 20px;
 
 	width: 100%;
